# origin

11.2/: 11.2.sln
11_2/: CMakeLists.txt  zadanie_11_2.sln
Dll1/: Dll1.sln
G_Lib/: G_Lib.sln
GreeterLib/: GreeterLib.sln
K_P_2_1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Rabbits_race.sln  Rabits_race.vcxproj  Rabits_race.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp
LeaverLIB/: LeaverLIB.sln
Project_11_2/: Project_11_2.sln
Task 11_3 — копия/: CMakeLists.txt
Task 4/: main.cpp
Task 9.3/: defaults.cpp  defaults.hpp
Task_11_1/: CMakeCache.txt  CMakeLists.txt  GreetingApp  Makefile  cmake_install.cmake
Task_11_1/src/: CMakeLists.txt  main.cpp
Task_11_3/: CMakeLists.txt  main.cpp
Task_2/: main.cpp
Task_7_3/: Rectangle.hpp  Romb.hpp
project 11.1/: project 11.1.sln
races_lib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AirRace.cpp  AirRace.h  CMakeCache.txt  CmakeLists.txt  LandRace.cpp  LandRace.h  MixRace.cpp  MixRace.h  Race.h  (+6 more)
vihicles_lib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Airvihicle.cpp  Airvihicle.h  Boots.cpp  Boots.h  Broom.cpp  Broom.h  CMakeCache.txt  CMakeLists.txt  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  Flycarpet.h  Landvihicle.cpp  Landvihicle.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  fastCamel.cpp  fastCamel.h  vihicle.cpp  vihicle.h  vihicles_lib.sln  vihicles_lib.vcxproj  vihicles_lib.vcxproj.filters
Домашнее задание к занятию «CMake»/Задание 1/: CMakeLists.txt  Figures.cpp  Parallelogram.hpp  Rectangle.cpp  Rectangle.hpp  defaults.cpp  r_Triangle.cpp  r_Triangle.hpp
(+583 files in other folders)
